--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
 
 :root {
   --dark-color: #1a1a1a;
-  --light-color: #f8f8f8;
+  --light-color: #ffffff;
   --accent-color: #e75480;
   --accent-light: #ffb7c5;
   --gold-color: #d4af37;
@@ -488,10 +488,9 @@ h3 {
 .memorial-section {
   min-height: 100vh;
   padding: 5rem 2rem;
-  background: linear-gradient(to bottom, #0a0e2a, #1a1a3a);
+  background: linear-gradient(to bottom, #2a389d, #5858e8);
   color: white;
   position: relative;
-  overflow: hidden;
 }
 
 .stars {
@@ -527,11 +526,58 @@ h3 {
 .note {
   position: absolute;
   width: 20px;
+  min-width: fit-content;
+  padding: auto;
   height: 20px;
+  max-width: 100px;
+  min-height: fit-content;
   background-color: var(--accent-light);
-  border-radius: 50%;
+  border-radius: 20px;
   opacity: 0.7;
   animation: float 10s linear infinite;
+}
+
+.simple-key {
+  transition: all 0.1s ease;
+  cursor: pointer;
+}
+
+.simple-key:hover {
+  opacity: 0.9;
+}
+
+.note {
+  animation: float-up 10s linear forwards;
+}
+
+@keyframes float-up {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-100vh);
+    opacity: 0;
+  }
+}
+
+.star {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background: white;
+  border-radius: 50%;
+  animation: twinkle 5s infinite;
+}
+
+@keyframes twinkle {
+  0%,
+  100% {
+    opacity: 0.2;
+  }
+  50% {
+    opacity: 1;
+  }
 }
 
 @keyframes float {
@@ -539,7 +585,7 @@ h3 {
     transform: translateY(0) rotate(0deg);
   }
   100% {
-    transform: translateY(-100vh) rotate(360deg);
+    transform: translateY(-100vh) rotate(0deg);
   }
 }
 
