--- a/app/components/Jagjeet_App.css
+++ b/app/components/Jagjeet_App.css
@@ -5,7 +5,7 @@
   --text-color: #4a4a4a;
 }
 
-.container {
+.container2 {
   max-width: 100vw;
   min-height: 100vh;
   padding: 2rem;
@@ -22,12 +22,28 @@
 .carousel-title {
   font-size: clamp(1.8rem, 6vw, 2.5rem);
   text-align: center;
-  margin-bottom: 1.5rem;
+  /* margin-bottom: 1.5rem; */
+
   /* color: var(--primary-color);
    */
-   color: #ff9eb3;
-  font-family: 'Playfair Display', serif;
-  text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+   font-family: "Playfair Display", serif;
+   color: var(--color-pink-500);
+ 
+  /* text-shadow: 2px 2px 4px rgba(0,0,0,0.1); */
+}
+.carousel-title-1{
+  /* font-size: clamp(1rem, 1.5vw, 1.2rem); */
+  font-size:14px;
+  text-align: center;
+  /* margin-bottom: 1.5rem; */
+
+  /* color: var(--primary-color);
+   */
+   font-family: "Montserrat", sans-serif;
+   /* color: var(--color-pink-500); */
+   color:var(--color-gray-700);
+ 
+  /* text-shadow: 2px 2px 4px rgba(0,0,0,0.1); */
 }
 
 .carousel-wrapper {
